[gd_scene load_steps=6 format=2]

[ext_resource path="res://checkpoint_1.gd" type="Script" id=1]
[ext_resource path="res://flag_green.png" type="Texture" id=2]
[ext_resource path="res://flag_red.png" type="Texture" id=3]
[ext_resource path="res://light_ball.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.86051, 6.42233 )

[node name="checkpoint_1" type="Area2D"]
script = ExtResource( 1 )

[node name="flag_green" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -6.17354 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -10, 0 )
scale = Vector2( 5, 4.5 )
shape = SubResource( 1 )

[node name="flag_red" type="Sprite" parent="."]
position = Vector2( 0, -6.73477 )
texture = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 17.0406 )
texture = ExtResource( 4 )
texture_scale = 4.0
color = Color( 1, 0.607843, 0, 1 )
energy = 0.75
range_z_min = -4096
range_z_max = 4096
[connection signal="body_entered" from="." to="." method="_on_checkpoint_1_body_entered"]
